--- a/MainMenu.xaml
+++ b/MainMenu.xaml
@@ -20,7 +20,7 @@
 			<StackPanel HorizontalAlignment="Center">
 				<!-- Contains math calculator and Mortgage calcualtor buttons-->
 				<Button x:Name="mathCalculatorButton" Content="Math Calculator" FontSize="48" Margin="0,0,10,10" Width="460" Height="100" Foreground="Black" Background="#33F13838"/>
-				<Button x:Name="mortgageCalculatorButton" Content="Mortgage Calcualtor" FontSize="48" Margin="0,0,0,10" Width="460" Height="100" Foreground="Black" Background="#33F13838"/>
+				<Button x:Name="mortgageCalculatorButton" Content="Mortgage Calcualtor" FontSize="48" Margin="0,0,0,10" Width="460" Height="100" Foreground="Black" Background="#33F13838" Click="mortgageCalculatorButton_Click"/>
 			</StackPanel>
 			<StackPanel HorizontalAlignment="Center" Height="220.8" Width="470.4">
 				<!-- Contains currency calculator and exit buttons-->
