--- a/CurrencyConversion.xaml
+++ b/CurrencyConversion.xaml
@@ -42,7 +42,7 @@
 			</StackPanel>
 			<StackPanel HorizontalAlignment="Center">
 				<Button Content="Currency Conversion" Margin="0,0,0,10" FontSize="48" Click="Button_Click"/>
-				<Button Content="Exit" HorizontalAlignment="Center" FontSize="48" Click="Button_Click_1"/>
+				<Button Content="Exit" HorizontalAlignment="Center" FontSize="48"/>
 			</StackPanel>
 		</StackPanel>
 
