--- a/MainMenu.xaml
+++ b/MainMenu.xaml
@@ -19,13 +19,13 @@
 			</StackPanel>
 			<StackPanel HorizontalAlignment="Center">
 				<!-- Contains math calculator and Mortgage calcualtor buttons-->
-				<Button x:Name="mathCalculatorButton" Content="Math Calculator" FontSize="48" Margin="0,0,10,10" Width="460" Height="100" Foreground="Black" Background="#33F13838" Click="mathCalculatorButton_Click"/>
+				<Button x:Name="mathCalculatorButton" Content="Math Calculator" FontSize="48" Margin="0,0,10,10" Width="460" Height="100" Foreground="Black" Background="#33F13838"/>
 				<Button x:Name="mortgageCalculatorButton" Content="Mortgage Calcualtor" FontSize="48" Margin="0,0,0,10" Width="460" Height="100" Foreground="Black" Background="#33F13838" Click="mortgageCalculatorButton_Click"/>
 			</StackPanel>
 			<StackPanel HorizontalAlignment="Center" Height="220.8" Width="470.4">
 				<!-- Contains currency calculator and exit buttons-->
-				<Button x:Name="currencyCalculatorButton" Content="Currency Calculator" FontSize="48" Width="460" Height="100" Margin="0,0,0,10" Foreground="Black" Background="#33F13838" Click="currencyCalculatorButton_Click"/>
-				<Button x:Name="exitButton" Content="Exit" FontSize="48" Width="460" Height="100" Foreground="Black" BorderBrush="#33F13838" Background="#33F13838" Click="exitButton_Click"/>
+				<Button x:Name="currencyCalculatorButton" Content="Currency Calculator" FontSize="48" Width="460" Height="100" Margin="0,0,0,10" Foreground="Black" Background="#33F13838"/>
+				<Button x:Name="exitButton" Content="Exit" FontSize="48" Width="460" Height="100" Foreground="Black" BorderBrush="#33F13838" Background="#33F13838"/>
 			</StackPanel>
 		</StackPanel>
 	</Grid>
